--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: node_js
+
+before_script:
+  - sudo apt-get install -qq tesseract-ocr
+  - cp ./share/eng.traineddata /usr/local/share/tessdata/
+  - cp ./share/configs/alphanumeric /usr/local/share/tessdata/configs/alphanumeric
 node_js:
   - "0.8"
   - "0.6"
