--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,7 @@ before_script:
   - sudo apt-get install -qq tesseract-ocr
   - which tesseract
   - stat ./share/eng.traineddata
-  - ls -R /usr/local/share
-  - cp ./share/eng.traineddata /usr/local/share/tesseract/tessdata/
-  - cp ./share/configs/alphanumeric /usr/local/share/tesseract/tessdata/configs/alphanumeric
-
+  - ls -R /usr/local/share/
   
 node_js:
   - "0.8"
