added travis-ci build status badge to readme

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ before_script:
   - sudo apt-get install -qq tesseract-ocr
   - which tesseract
   - cat ./share/configs/alphanumeric
+  - ls -R /usr/share/tesseract-ocr/
+  - cp ./share/eng.traineddata /usr/share/tesseract-ocr/tessdata/
+  - cp ./share/configs/alphanumeric /usr/share/tesseract-ocr/tessdata/configs/alphanumeric
   
-  - ls -R /usr/share/
-  - cp ./share/eng.traineddata /usr/share/tesseract/tessdata/
-  - cp ./share/configs/alphanumeric /usr/share/tesseract/tessdata/configs/alphanumeric
 
 node_js:
   - "0.8"
