--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: node_js
 before_script:
   - sudo apt-get install -qq pdftk
   - sudo apt-get install -qq tesseract-ocr
+  - sudo apt-get install -qq poppler-utils
   - which tesseract
   - cat ./share/configs/alphanumeric
   - ls -R /usr/share/tesseract-ocr/
