--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_script:
   - sudo apt-get install -qq tesseract-ocr
   - sudo apt-get install -qq poppler-utils
   - sudo cp ./share/eng.traineddata /usr/share/tesseract-ocr/tessdata/
+  - sudo cp ./share/dia.traineddata /usr/share/tesseract-ocr/tessdata/
   - sudo cp ./share/configs/alphanumeric /usr/share/tesseract-ocr/tessdata/configs/alphanumeric
 
 node_js:
