added git repo to package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "test": "mocha --reporter spec"
   },
+
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/nisaacson/pdf-extract.git"
+  },
+
   "main": "main.js",
   "folders": "lib",
   "dependencies": {
