--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pdf-extract",
   "engines": "node",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "scripts": {
     "test": "node_modules/.bin/mocha --reporter spec"
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "should": "~1.2.1",
-    "mocha": "~1.8.1"
+    "mocha": "~1.8.1",
+    "pathhash": "~1.0.0"
   }
 }
