--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,11 @@
 {
   "name": "pdf-extract",
+  "description": "Extract text from pdf documents using ocr or straight text exraction",
   "engines": "node",
   "version": "1.0.7",
   "private": false,
   "scripts": {
-    "test": "node_modules/.bin/mocha --reporter spec"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -13,15 +14,17 @@
   "main": "main.js",
   "folders": "lib",
   "dependencies": {
-    "eyespect": "~0.1.8",
     "async": "~0.1.22",
-    "temp": "~0.4.0",
-    "walk": "~2.2.1",
+    "errs": "^0.3.2",
+    "eyespect": "~0.1.8",
+    "pathhash": "~1.0.0",
     "rimraf": "~2.0.2",
-    "pathhash": "~1.0.0"
+    "temp": "~0.4.0",
+    "walk": "~2.2.1"
   },
   "devDependencies": {
-    "should": "~1.2.1",
-    "mocha": "~1.8.1"
+    "eslint": "^0.10.2",
+    "mocha": "~1.8.1",
+    "should": "~1.2.1"
   }
 }
